# haruka-cpp

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  compile_shaders.sh  setup_deps.sh
docs/guides/: ANALISIS_SISTEMAS.md  DIAGRAMAS_FLUJO.md  GUIA_RAPIDA.md  PATRONES_USO.md
shaders/: bloom_blur.frag  bloom_composite.frag  bloom_extract.frag  brdf_lut.frag  brdf_lut.vert  deferred_geom.frag  deferred_geom.vert  deferred_light.frag  equirect_to_cubemap.frag  equirect_to_cubemap.vert  frustum_cull.comp  ibl.frag  instancing.frag  instancing.vert  irradiance_convolution.frag  irradiance_convolution.vert  light_cube.frag  parallax.frag  pbr.frag  planet_generation.comp  point_shadow.frag  point_shadow.geom  point_shadow.vert  prefilter_env.frag  prefilter_env.vert  screenquad.vert  shadow.frag  shadow.vert  simple.frag  simple.vert  ssao.frag  tonemapping.frag
src/: main.cpp
src/audio/: audio_manager.cpp  audio_manager.h
src/core/: application.cpp  application.h  camera.cpp  camera.h  chunk_cache.cpp  chunk_cache.h  component.h  debug_overlay.cpp  debug_overlay.h  error_reporter.cpp  error_reporter.h  event_manager.h  game_interface.h  json.hpp  lod_system.cpp  lod_system.h  math_types.h  noise_generator.h  object_types.h  prefab_utils.cpp  prefab_utils.h  primitive_types.h  project.cpp  project.h  scene.cpp  scene.h  startup_report.h  terrain_streaming_system.cpp  terrain_streaming_system.h  world_system.cpp  world_system.h
src/core/components/: material_component.cpp  material_component.h  mesh_component.h  mesh_renderer_component.cpp  mesh_renderer_component.h  model_component.h  script_component.cpp  script_component.h  transform_component.cpp  transform_component.h
src/core/scene/: scene_loader.cpp  scene_loader.h  scene_manager.h  scene_validator.h
src/core/terrain/: terrain_generator.cpp  terrain_generator.h  terrain_streaming_system.cpp  terrain_streaming_system.h
src/database/: database_manager.cpp  database_manager.h
src/game/: character.cpp  character.h  chat_system.h  ingame_chat.cpp  ingame_chat.h  noise_generator.cpp  noise_generator.h  planetary_system.cpp  planetary_system.h  spawn_system.cpp  spawn_system.h
src/io/: asset_streamer.cpp  asset_streamer.h
src/network/: network_manager.cpp  network_manager.h  socket_server.cpp  socket_server.h  websocket_client.cpp  websocket_client.h
src/physics/: octree.cpp  octree.h  physics_engine.cpp  physics_engine.h  raycast_simple.cpp  raycast_simple.h
src/renderer/: bloom.cpp  bloom.h  buffer_objects.cpp  buffer_objects.h  cascaded_shadow.cpp  cascaded_shadow.h  compute_postprocess.cpp  compute_postprocess.h  compute_shader.cpp  compute_shader.h  gbuffer.cpp  gbuffer.h  gpu_instancing.cpp  gpu_instancing.h  hdr.cpp  hdr.h  ibl.cpp  ibl.h  light_culler.cpp  light_culler.h  mesh.cpp  mesh.h  mesh_lod.cpp  mesh_lod.h  mesh_optimizer.cpp  mesh_optimizer.h  model.cpp  model.h  motor_instance.cpp  motor_instance.h  point_shadow.cpp  point_shadow.h  primitive_shapes.cpp  primitive_shapes.h  render_target.cpp  render_target.h  shader.cpp  shader.h  shadow.cpp  shadow.h  (+12 more)
src/scene/: scene_validate.cpp  scene_validate.h
src/tools/: event_manager.cpp  events.h  object_types.h  planetary_types.h
